fix minor spacing issue

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -2338,7 +2338,7 @@ fieldset {
 }
 
 #footer .credit-badge-container {
-  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 #footer .credit-badge {
